k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: portfolio-site-v6-prodigy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: admin
          image: sresthaa17/portfolio-site-v6-prodigy:admin
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: portfolio-site-v6-prodigy
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
