k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: portfolio-site-v6-prodigy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ui
          image: sresthaa17/portfolio-site-v6-prodigy:ui
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: portfolio-site-v6-prodigy
spec:
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 80
